# f2021-stat39000-project9

./: pyproject.toml
app/: imdb.py  main.py  queries.sql  schemas.py
