[tool.poetry]
name = "f2021-stat39000-project9"
version = "0.1.0"
description = "An imdb api for educational purposes."
authors = ["Kevin Amstutz <kevin@amstutz.io>"]

[tool.poetry.dependencies]
python = "~3.9"
fastapi = {extras = ["all"], version = "^0.70.0"}
aiosql = "^3.3.1"
python-dotenv = "^0.19.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
